# NEC2-RA

./: .gitignore  LBA_X_3SbyS.py  LICENSE  README.md  Tianyang.py  Warnick_6x1_.py  figures_paper.py  figures_thesis.py  nec2array.py  pyproject.toml  sub.sh  test_nec2array.py
figures_paper_materials/: power_simulation.npz
figures_thesis_materials/: dual_xpol_100_f44.9_s100_numa96_imp.npy  dual_xpol_100_f44.9_s20_numa96_imp.npy  dual_xpol_96_100_f44.92_s101_numa96_imp.npy  dual_xpol_96_f44.92_s101_numa96_imp.npy  dual_xpol_f44.9_s100_numa96_imp.npy  dual_xpol_f44.9_s20_numa96_imp.npy  dual_ypol_96_f44.92_s101_numa96_imp.npy  dual_ypol_f44.9_s100_numa96_imp.npy  dual_ypol_f44.9_s20_numa96_imp.npy
test/: test_nec2array.py
